--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -122,3 +122,7 @@ NetServerMaxTickRate=60
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Blaster.CharacterOverlay.HealthText",NewName="/Script/Blaster.CharacterOverlay.HealthRatio")
++PropertyRedirects=(OldName="/Script/Blaster.CharacterOverlay.ScoreAmout",NewName="/Script/Blaster.CharacterOverlay.ScoreAmount")
